# rust-xiir

./: Cargo.toml  README.md
docs/: components.md  prd.md
src/: main.rs
